[project]
name = "runninghub-image-gen"
version = "0.1.0"
description = "RunningHub text-to-image MCP plugin - seedream-v5-lite"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastmcp>=2.14.5,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.scripts]
runninghub-image-gen = "runninghub_image_gen.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["runninghub_image_gen*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"